Closed
Bug 878612
Opened 13 years ago
Closed 13 years ago
nsCSSRendering::GetBackgroundLayerRect doesn't pass through the background drawing flags to PrepareBackgroundLayer
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: tnikkel, Assigned: tnikkel)
References
Details
Attachments
(2 files)
|
5.68 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
|
1.75 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
This means that nsDisplayBackgroundImage::GetBoundsInternal when it calls GetBackgroundLayerRect can get a different result then when we call PrepareBackgroundLayer later for the actual drawing. This doesn't make sense, they should both do the same thing.
This allows bug 845147 to be green.
Attachment #757169 -
Flags: review?(matt.woodrow)
| Assignee | ||
Comment 1•13 years ago
|
||
This one reftest hits the same assert more times because we actually proceed through to the body of nsImageRenderer::PrepareImage when we are just getting the bounds instead of only when we are painting the background image when the sync decode flag is passed in correctly.
The assert is
ASSERTION: ComputeActualCropRect() should not fail here: 'success', file ../../../layout/base/nsCSSRendering.cpp, line 4284
Attachment #757173 -
Flags: review?(matt.woodrow)
Updated•13 years ago
|
Attachment #757169 -
Flags: review?(matt.woodrow) → review+
Updated•13 years ago
|
Attachment #757173 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/78606950ee2e
https://hg.mozilla.org/mozilla-central/rev/1cdf2076eb73
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•