Bug 878612. Make sure to pass through the background painting flags through in all cases. r=matt.woodrow